--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		3 random audios
+		<ul>
+			<audio controls>
+			  <li>
+				  <a href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">URL1</a>
+			  </li>
+			  <li>
+				 <a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">URL2</a>
+			  </li>
+			<li>
+				<a href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">URL3</a>
+			</li>	
+			</audio>
+		</ul>
+	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
